<resources>
    <string name="abt_name_label">Author: </string>
    <string name="abt_version_label">Version: </string>

    <string name="add_bookmark_activity_title">Add Bookmark</string>
    <string name="add_bookmark_btn_save">Add</string>
    <string name="add_bookmark_empty_field_msg">You must insert at least the title and the page number.</string>
    <string name="add_bookmark_hint_title">Title</string>
    <string name="add_bookmark_hint_chapter">Chapter</string>
    <string name="add_bookmark_hint_page">Page</string>
    <string name="add_bookmark_label">Add Bookmark</string>

    <string name="app_name">Bookmarks</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_bookmark">Add Bookmark</string>

    <string name="bookmark_title">Title: </string>
    <string name="bookmark_chapter">Chapter: </string>
    <string name="bookmark_page">Page: </string>
    <string name="bookmark_btn_add">Add</string>

    <string name="dlg_del_title">Delete this item?</string>
    <string name="dlg_del_msg_text">Are you sure you want delete this item?</string>
    <string name="dlg_del_no_text">No</string>
    <string name="dlg_del_yes_text">Yes</string>

    <string-array name="drawer_options">
        <item>Bookmarks</item>
        <item>Settings</item>
    </string-array>

    <string name="edit_bookmark_btn_edit">Edit</string>
    <string name="edit_bookmark_label">Edit Bookmark</string>
    <string name="edit_bookmark_hint_chapter">Chapter</string>
    <string name="edit_bookmark_hint_page">Page</string>
    <string name="edit_bookmark_hint_title">Title</string>
    <string name="edit_bookmark_title">Edit Bookmark</string>

    <string name="list_bookmarks_toolbar_title">Bookmarks</string>

    <string name="title_activity_about">About</string>
    <string name="title_activity_list_bookmarks">ListBookmarksActivity</string>
    <string name="title_activity_delete_dialog">DeleteDialog</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Settings -->
    <string name="settings_title_color_text">Title color text</string>
    <string name="settings_title_color_text_summary">This color change title color text of your bookmarks.</string>
    <string name="settings_chapter_color_text">Chapter color text</string>
    <string name="settings_chapter_color_text_summary">This color change chapter color text of your bookmarks.</string>
    <string name="settings_page_color_text">Page color text</string>
    <string name="settings_page_color_text_summary">This color change page color text of your bookmarks.</string>
</resources>
