<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="shruikan.bookmarks.com.bookmarks.activities.AddBookmarkActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/add_bkm_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_bookmark_label"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/add_bkm_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_bookmark_hint_title"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/add_bkm_chapter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_bookmark_hint_chapter"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/add_bkm_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_bookmark_hint_page"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="36sp" />

        <Button
            android:id="@+id/add_bkm_save"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/add_bookmark_btn_save"
            android:textColor="@color/colorWhiteText"
            android:textStyle="bold"
            tools:text="@string/add_bookmark_btn_save" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
